--- a/BoardViewer.html
+++ b/BoardViewer.html
@@ -32,11 +32,10 @@
     <script>
       // This function uses a board visualizer lets you view an interactive version of any piece matrix.
       window.displayBoard = function(matrix){
-        $('body').html(
-          new BoardView({
-            model: new Board(matrix)
-          }).render()
-        );
+        myBoardView = new BoardView({
+          model: new Board(matrix)
+        });
+        $('body').html(myBoardView.render());
       };
       $(function(){
         // this is a pre-baked solution for n-queens in the n = 4 case, rendered to the screen using our handy visualizer.
